--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Jay Montclaire</title>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&family=Playfair+Display:wght@400;600&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Cormorant:ital,wght@0,300..700;1,300..700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css" />
 </head>
 
@@ -52,7 +54,7 @@
       </div>
     </div>
 
-    <div class="contact">
+    <div class="my_class_0058">
       <div class="contactphoto">
         <img src="https://images.squarespace-cdn.com/content/v1/62bdaf73b9e1ce28b49e3811/1656598397615-7VXNFDLQ4AHNHKPY6H7R/Group+58.jpg?format=2500w" alt="Artiste"/>
       </div>
